IFUIP-7 add Median Filter button

--- a/image_filtering/src/main/resources/pl/jgmbl/image_filtering/index-view.fxml
+++ b/image_filtering/src/main/resources/pl/jgmbl/image_filtering/index-view.fxml
@@ -15,5 +15,8 @@
     <Button text="import" onAction="#onImportButtonClick"/>
 
     <Label fx:id="gaussFilter"/>
-    <Button text="GaussFilter" onAction="#onGaussFilterButtonClick"/>
+    <Button text="Gauss Filter" onAction="#onGaussFilterButtonClick"/>
+
+    <Label fx:id="medianFilter"/>
+    <Button text="Median Filter" onAction="#onMedianFilterButtonClick"/>
 </VBox>
