IFUIP-7 add Unsharp Masking button

--- a/image_filtering/src/main/resources/pl/jgmbl/image_filtering/index-view.fxml
+++ b/image_filtering/src/main/resources/pl/jgmbl/image_filtering/index-view.fxml
@@ -19,4 +19,7 @@
 
     <Label fx:id="medianFilter"/>
     <Button text="Median Filter" onAction="#onMedianFilterButtonClick"/>
+
+    <Label fx:id="unsharpMasking"/>
+    <Button text="Unsharp masking" onAction="#onUnsharpMaskingButtonClick"/>
 </VBox>
