--- a/image_filtering/src/main/resources/pl/jgmbl/image_filtering/import-view.fxml
+++ b/image_filtering/src/main/resources/pl/jgmbl/image_filtering/import-view.fxml
@@ -18,7 +18,7 @@
 
         <Label fx:id="importData"/>
         <Button text="Import" onAction="#onImportButtonClick"/>
-        <TextField fx:id="path"/>
+        <TextField fx:id="path" promptText="Folder path"/>
     </VBox>
 </AnchorPane>
 
