IFUIP-9 add reading files from a directory

--- a/image_filtering/src/main/resources/pl/jgmbl/image_filtering/import-view.fxml
+++ b/image_filtering/src/main/resources/pl/jgmbl/image_filtering/import-view.fxml
@@ -17,7 +17,7 @@
         </padding>
 
         <Label fx:id="importData"/>
-        <Button text="Import" onAction="#onImportButtonClick"/>
+        <Button text="Import" onAction="#onImportClick"/>
         <TextField fx:id="path" promptText="Folder path"/>
     </VBox>
 </AnchorPane>
