--- a/image_filtering/src/main/resources/pl/jgmbl/image_filtering/import-view.fxml
+++ b/image_filtering/src/main/resources/pl/jgmbl/image_filtering/import-view.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 
+<?import javafx.scene.control.ListView?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="pl.jgmbl.image_filtering.ImportController"
@@ -19,6 +20,7 @@
         <Label fx:id="importData"/>
         <Button text="Import" onAction="#onImportClick"/>
         <TextField fx:id="path" promptText="Folder path"/>
+        <ListView fx:id="importedImagesList"/>
     </VBox>
 </AnchorPane>
 
