--- a/image_filtering/src/main/resources/pl/jgmbl/image_filtering/import-view.fxml
+++ b/image_filtering/src/main/resources/pl/jgmbl/image_filtering/import-view.fxml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="pl.jgmbl.image_filtering.ImportController"
             prefHeight="400.0" prefWidth="600.0">
-    <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml">
+    <HBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml">
         <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
         </padding>
@@ -21,6 +20,6 @@
         <Button text="Import" onAction="#onImportClick"/>
         <TextField fx:id="path" promptText="Folder path"/>
         <ListView fx:id="importedImagesList"/>
-    </VBox>
+    </HBox>
 </AnchorPane>
 
