IFUIP-12 add enter button to importy data

--- a/image_filtering/src/main/resources/pl/jgmbl/image_filtering/import-view.fxml
+++ b/image_filtering/src/main/resources/pl/jgmbl/image_filtering/import-view.fxml
@@ -18,7 +18,7 @@
 
         <Label fx:id="importData"/>
         <Button text="Import" onAction="#onImportClick"/>
-        <TextField fx:id="path" promptText="Folder path"/>
+        <TextField fx:id="path" promptText="Folder path" onAction="#onImportClick"/>
         <ListView fx:id="importedImagesList"/>
     </HBox>
 </AnchorPane>
