IFUIP-13 add delete box

--- a/image_filtering/src/main/resources/pl/jgmbl/image_filtering/import-view.fxml
+++ b/image_filtering/src/main/resources/pl/jgmbl/image_filtering/import-view.fxml
@@ -23,6 +23,12 @@
             <Label fx:id="importData"/>
             <ListView fx:id="importedImagesList"/>
         </VBox>
+
+        <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml">
+            <TextField fx:id="deletePath" promptText="Folder path" onAction="#onImportClick" prefWidth="400"/>
+            <Button text="Delete" onAction="#onDeleteClick"/>
+            <Label fx:id="deleteData"/>
+        </VBox>
     </HBox>
 </AnchorPane>
 
