--- a/image_filtering/src/main/resources/pl/jgmbl/image_filtering/import-view.fxml
+++ b/image_filtering/src/main/resources/pl/jgmbl/image_filtering/import-view.fxml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="pl.jgmbl.image_filtering.ImportController"
@@ -16,6 +11,13 @@
         <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
         </padding>
+
+        <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml">
+            <Label fx:id="importInfo" VBox.vgrow="ALWAYS"/>
+            <Button text="Refresh" onAction="#onRefreshClick"/>
+            <Label fx:id="importedPhotosInfo" VBox.vgrow="ALWAYS"/>
+            <ListView fx:id="listOfImages"/>
+        </VBox>
 
         <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml">
             <TextField fx:id="path" promptText="Folder path" prefWidth="400"/>
