--- a/image_filtering/src/main/resources/pl/jgmbl/image_filtering/gauss-view.fxml
+++ b/image_filtering/src/main/resources/pl/jgmbl/image_filtering/gauss-view.fxml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="pl.jgmbl.image_filtering.GaussFilterController"
             prefHeight="400.0" prefWidth="600.0">
+
+    <HBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml">
+        <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        </padding>
+
+        <VBox alignment="CENTER" spacing="20.0" prefWidth="400" xmlns:fx="http://javafx.com/fxml">
+            <Label fx:id="gaussFilterInfo" VBox.vgrow="ALWAYS"/>
+            <TextField fx:id="blurring" promptText="The value of the blur parameter" prefWidth="400"/>
+        </VBox>
+
+        <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml">
+            <Label fx:id="exportInfo" VBox.vgrow="ALWAYS"/>
+            <TextField fx:id="gaussExportPath" promptText="Folder path" prefWidth="400"/>
+            <Button text="Export" onAction="#onExportClick"/>
+            <Label fx:id="exportData"/>
+            <ListView fx:id="exportedImagesList"/>
+        </VBox>
+    </HBox>
 
 </AnchorPane>
