IFUIP-3 add reading data from TextFields

--- a/image_filtering/src/main/resources/pl/jgmbl/image_filtering/gauss-view.fxml
+++ b/image_filtering/src/main/resources/pl/jgmbl/image_filtering/gauss-view.fxml
@@ -15,7 +15,7 @@
 
         <VBox alignment="CENTER" spacing="20.0" prefWidth="400" xmlns:fx="http://javafx.com/fxml">
             <Label fx:id="gaussFilterInfo" VBox.vgrow="ALWAYS"/>
-            <TextField fx:id="blurring" promptText="The value of the blur parameter" prefWidth="400"/>
+            <TextField fx:id="blurringParameter" promptText="The value of the blur parameter" prefWidth="400"/>
         </VBox>
 
         <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml">
