--- a/image_filtering/src/main/resources/pl/jgmbl/image_filtering/index-view.fxml
+++ b/image_filtering/src/main/resources/pl/jgmbl/image_filtering/index-view.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
-
-<?import javafx.scene.control.Button?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="pl.jgmbl.image_filtering.IndexController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
+
+    <Label fx:id="appInfo"/>
 
     <Label fx:id="importImages"/>
     <Button text="Import images" onAction="#onImportButtonClick"/>
@@ -22,4 +22,6 @@
 
     <Label fx:id="unsharpMasking"/>
     <Button text="Unsharp masking" onAction="#onUnsharpMaskingButtonClick"/>
+
+    <Label fx:id="aboutCreator" style="-fx-text-fill: #808080;"/>
 </VBox>
